# snyk-threadfix

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml  pytest.ini  test_main.py  test_tokenparsing.py  utils.py
.circleci/: config.yml
snyk_threadfix/: __init__.py  main.py  utils.py
tests/: test_main.py  test_snyk_threadfix.py  test_tokenparsing.py
