[tool.poetry]
name = "snyk-threadfix"
version = "0.0.4"
description = ""
authors = ["Jeff McLean <jeff@snyk.io>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/snyk-labs/snyk-threadfix"

[tool.poetry.dependencies]
python = "^3.7"
arrow = "*"
pysnyk = "^0.2.0"
poetry-version = "^0.1.5"

[tool.poetry.scripts]
snyk-threadfix = "snyk_threadfix.main:run"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-black = "^0.3.7"
pytest-cov = "^2.7"
pytest-isort = "^0.3.1"
mock = "^3.0"
requests-mock = "^1.7"
tomlkit = "^0.5.8"
python-semantic-release = "^4.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88
