[tool.poetry]
name = "snyk-threadfix"
version = "0.0.6"
description = ""
authors = ["Jeff McLean <jeff@snyk.io>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/snyk-labs/snyk-threadfix"

[tool.poetry.dependencies]
python = "^3.7"
arrow = "*"
pysnyk = "^0.8.1"
importlib-metadata = "^4.11.2"

[tool.poetry.scripts]
snyk-threadfix = "snyk_threadfix.main:run"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-black = "^0.3.7"
pytest-cov = "^3.0.0"
pytest-isort = "^3.0.0"
mock = "^3.0"
requests-mock = "^1.7"
tomlkit = "^0.7.0"
python-semantic-release = "^7.24.0"

[tool.semantic_release]
version_variable = "semantic_release/__init__.py:__version__"
version_source = "tag"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88
